@startuml
title "Assembly Station - Separation of Concerns"
component common {
    interface AssemblyStationSPI {
        +createAssemblyStation()
    }
    interface IAssemblyStationService {
        +startProcess()
        +getStatus()
        +checkHealth()
    }
}

component assemblystation {
    class AssemblyStationService {
            +startProcess()
            +getStatus()
            +checkHealth()
    }

    class AssemblyCommand {
    }

    class AssemblyStation {
    +createAssemblyStation()
    }
}
    note right of AssemblyStation
        This acts as main object (asset)
    end note

AssemblyStationSPI <|.. AssemblyStation
IAssemblyStationService <|.. AssemblyStationService

AssemblyCommand --> AssemblyStation
AssemblyStationService --> AssemblyStation : updates
@enduml